<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.test.testmenu.MainActivity">

    <group
        android:id="@+id/group_menu">
    <item
        android:icon="@mipmap/all_appeals"
        android:id="@+id/action_allAppeals"
        android:orderInCategory="1"
        android:title="@string/allAppeals"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@mipmap/appeals_on_map"
        android:id="@+id/action_appealsOnMap"
        android:orderInCategory="2"
        android:title="@string/appealsOnMap"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logIn"
        android:orderInCategory="2"
        android:title="@string/logIn"
        app:showAsAction="never" />
    </group>
</menu>
